--- a/views/error.html
+++ b/views/error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>error</title>
 </head>
 <body>
-<h1>Welcome to <%= title %></h1>
+<h2>error error</h2>
 </body>
 </html>
